# bias-loader-uefi

./: .gitmodules  Cargo.toml  README.md  build.rs
cxx/: guids.h  uefitool.cpp  uefitool.h
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pfat.rs  fuzz_pfs.rs
guids/: generate_header.py
src/: depex.rs  lib.rs
src/parsers/: mod.rs  pfat.rs  pfs.rs
src/secureboot/: README.md  auth.rs  constants.rs  mod.rs  parser.rs
