[package]
name = "bias-loader-uefi"
authors = [
  "Yegor Vasilenko <yegor@binarly.io>",
  "Sam L. Thomas <sam@binarly.io>",
  "Fabio Pagani <fabio@binarly.io>",
  "Claudiu-Vlad Ursache <claudiuv@binarly.io>",
]
version = "1.0.1"
edition = "2021"
categories = ["parsing"]
description = "A Rust library for parsing and loading UEFI firmware images"
documentation = "https://docs.rs/bias-loader-uefi"
exclude = ["fuzz/", "guids/", "tests/"]
keywords = ["uefi", "loader", "parsing", "firmware"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/binarly-io/bias-loader-uefi"

[features]
default = []

[dependencies]
arrayvec = "0.7"
cxx = "1"
flate2 = "1"
goblin = { version = "0.4", package = "bias-goblin" }
hex-display = "0.3.0"
once_cell = "1"
regex = "1"
self_cell = "1"
scroll = { version = "0.12", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
serde_with = "2"
thiserror = "1"
tracing = "0.1"
utf16string = "0.2"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = "0.3"

[build-dependencies]
cc = "1"
cxx-build = "1"
glob = "0.3"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
