[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"
bias-loader-uefi = { path = ".." }

["."]

[[bin]]
name = "fuzz_pfat"
path = "fuzz_targets/fuzz_pfat.rs"
test = false
doc = false

[[bin]]
name = "fuzz_pfs"
path = "fuzz_targets/fuzz_pfs.rs"
test = false
doc = false
